# bevy_jam_2

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: components.rs  level.rs  main.rs  player.rs  resources.rs  slime.rs  systems.rs
src/actors/: player.rs
src/components/: mod.rs
wasm/: index.html
