[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "^0.8"
# Use the git branch because Trouv asked for beta testers.
#bevy_ecs_ldtk = "^0.4"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch = "feat/respawn" }
bevy_egui = "^0.15"
bevy-inspector-egui = "^0.12"
bitflags="^1.3"
hashbrown = "0.12"
rand = "^0.8"
#serde = { version = "1", features = ["derive"] }
#serde_json = "^1.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
#lto = true  # Takes the app from 25 megs to 23, but makes the compilation take 8 minutes.
opt-level = "z"  # Optimize for size rather than performance.  Takes app to 17 megs.
panic = "abort"  # This changes the application behavior!  Takes app to 13 megs.

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1